@startuml classes
left to right direction
skinparam actorStyle Awesome
skinparam ArrowThickness 1
!theme aws-orange
skinparam backgroundcolor White

'Titre'
title Classes

'Comment'
class Comment {
    {static} +idComment: int
    +content: text
    +creationDate: date
}

'Comment Status'
class CommentStatus {
    {static} +idCommentStatus: int
    +name: enum
}

'Article'
class Article {
    {static} +idArticle: int
    +title: string
    +creationDate: date
    +updateDate: date
    +summary: text
    +content: text
}

'Article Status'
class ArticleStatus {
    {static} +idArticleStatus: int
    +name: enum
}

'Role'
class Role {
    {static} +idRole: int
    +name: enum
}

'Member'
class Member {
    {static} +idMember: int
    +registrationDate: date
    +isActive: bool
}

'LoginCredentials'
class LoginCredentials {
    {static} +idLoginCredentials: int
    +username: string
    +email: string
    +password: string
}

'Hash'
class Hash {
    {static} +idHash: int
    +hash: string
    +isActive: bool 
}

'Déroulement'
Member "1" <-- "1" LoginCredentials: $warning("CONNECT")
Member "1" <-- "1..*" Hash: $warning("INCLUDE")
Member "*" <-up- "1" Role : $warning("OWN")
Article "*" <-- "\n1" Member: $warning("WRITE")
Comment "*" <-- "1" Member: $warning("LEAVE")
Comment "\n*" --> "1" Article: $warning("CONTAIN")
Article "*" <-- "1" ArticleStatus: $warning("HOLD")
CommentStatus "1" --> "*" Comment: $warning("HAVE")
@enduml